# swagger.yml
@@ -1,16 +1,17 @@
-openapi: 3.0.0
-servers:
-  - description: SwaggerHub API
-    url: https://virtserver.swaggerhub.com/KOKE106/Highway/1.0.0
+openapi: 3.0.2
 info:
-  description: API to recover user profile
+  title: Highway API
+  description: API to recover highway
   version: "1.0.0"
-  title: Get user profile
   contact:
     email: koke106@gmail.com 
   license:
     name: Apache 2.0
     url: 'http://www.apache.org/licenses/LICENSE-2.0.html'
+servers:
+  - url: http://localhost:8000
+    description: Local testing API
+    
 paths:
   /profile:
     get:
@@ -64,7 +65,6 @@ paths:
           description: User not found
         500:
           description: Internal error
-
   /car:
     get:
       summary: Get car info
@@ -85,6 +85,51 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Car'
+        401:
+          description: Not authorized
+        404:
+          description: User not found
+        500:
+          description: Internal error
+  /assembly:
+    get:
+      summary: Get assembly info
+      description: This operation return all assembly info of the car
+      tags:
+        - Assembly
+      parameters:
+        - name: id
+          in: header
+          required: true
+          description: Id of the assembly
+          schema:
+            type: string
+      responses:
+        200:
+          description: Assembly info
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Car'
+        401:
+          description: Not authorized
+        404:
+          description: User not found
+        500:
+          description: Internal error
+  /parts:
+    get:
+      summary: Parts
+      description: This operation returns all available parts
+      tags:
+        - Parts
+      responses:
+        200:
+          description: List of parts
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/News'
         401:
           description: Not authorized
         404:
@@ -119,22 +164,38 @@ components:
         id:
           type: integer
           description: Unique ID user
-        nombre:
+        username:
           type: string
           description: Username
+        name:
+          type: string
+          description: Name
+        surname:
+          type: string
+          description: Surname
         email:
           type: string
           description: Email
+        password:
+          type: string
+          description: Password
         rol:
           type: string
           description: User rol
+        creation_date:
+          type: string
+          format: date-time
+          description: Date creation
     Team:
       type: object
       properties: 
         id:
           type: integer
           description: Unique ID team
-        nombre:
+        id_profile:
+          type: integer
+          description: Unique ID profile
+        name:
           type: string
           description: Team Name
     Car:
@@ -142,27 +203,63 @@ components:
       properties: 
         id:
           type: integer
+          description: Unique ID car
+        id_team:
+          type: integer
           description: Unique ID team
-        nombre:
+        name:
           type: string
           description: Car Name
-        team_id:
+        brand:
+          type: string
+          description: Car Brand
+        model:
+          type: string
+          description: Car Model
+        year:
+          type: string
+          format: date-time
+          description: Car Year
+    Assembly:
+      type: object
+      properties:
+        id:
           type: integer
-          description: Team associate car
+          description: Unique ID assembly
+        id_car:
+          type: integer
+          description: Unique ID car
+        id_parts:
+          type: integer
+          description: Unique ID parts
+        characteristics:
+          type: string
+          description: characteristics
+    Parts:
+      type: object
+      properties:
+        id:
+          type: integer
+          description: Unique ID parts
+        name:
+          type: string
+          description: Part name
+        description:
+          type: integer
+          description: Part description
     News:
       type: object
       properties:
         id:
           type: integer
           description: Unique ID new
-        titulo:
+        title:
           type: string
           description: News title
-        contenido:
+        content:
           type: string
           description: News content
-        fecha:
+        date:
           type: string
           format: date-time
           description: Date of the new
-        
